<resources>
    <string name="app_name">Days</string>
    <!-- Event View -->
    <string name="days_left">%1$d:Days</string>

    <string name="selected_date">Selected Date</string>

    <!-- Add and Create Event View -->
    <string name="select_date">Please select a date!</string>
    <string name="event_title">Event Title</string>
    <string name="pick_date_btn">Pick a date</string>
    <string name="add_event">Add event</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>






</resources>
